argocd-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
    - name: gateway
      namespace: istio-system
      sectionName: http # or the name of the HTTPS listener
  hostnames:
    - "argocd.bergtobias.com"
  rules:
    - backendRefs:
        - name: argocd-server # The name of your ArgoCD service
          port: 80 # Or 443 if you’re re-encrypting, etc.
      # etc.
